# raytracer-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build_wasm.ps1  collect.bat  collect.ps1  index.html  package-lock.json  package.json  raytracer_wasm.js  raytracer_wasm_bg.wasm  run_wasm.ps1
.github/workflows/: ci.yaml
data/: 4boxes.dae  6boxes.dae  box.dae  ico.dae  ico2.dae  ico3_tex.dae  thai2.dae
parseval/: Cargo.toml
parseval/src/: lib.rs  parsers.rs  xml.rs
raytracer/: Cargo.toml
raytracer-rs/: Cargo.toml
raytracer-rs/src/: main.rs  stats.rs
raytracer-rs/src/raytracer/: accel_intersect.rs  film.rs  intersect.rs  mod.rs  sample_generator.rs
raytracer-rs/src/raytracer/accel_intersect/: no_acceleration_intersector.rs  oct_tree_intersector.rs
raytracer-rs/src/scene/: camera.rs  color.rs  mod.rs  texture.rs
raytracer-rs/src/scene/loaders/: boxloader.rs  colladaloader.rs  mod.rs
raytracer/src/: main.rs
raytracer/src/raytracer/: accel_intersect.rs  sample_generator.rs
raytracer/src/scene/: mod.rs
raytracer/src/scene/loaders/colladaloader/: collada_types.rs
raytracer_lib/: Cargo.toml
raytracer_lib/src/: lib.rs  vecmath.rs
raytracer_lib/src/raytracer/: accel_intersect.rs  mod.rs  sample_generator.rs
raytracer_lib/src/raytracer/accel_intersect/: no_acceleration_intersector.rs  oct_tree_intersector.rs
raytracer_lib/src/scene/: camera.rs  color.rs  mod.rs  texture.rs
raytracer_lib/src/scene/loaders/: colladaloader.rs  mod.rs
raytracer_lib/src/scene/loaders/colladaloader/: collada_types.rs
raytracer_rs/src/raytracer/: mod.rs
raytracer_rs/src/scene/loaders/: mod.rs
raytracer_wasm/: Cargo.toml
raytracer_wasm/src/: inline_data.rs  lib.rs
src/: main.rs  quad.frag  quad.vert  raytracer.rs  tonemap.rs  vecmath.rs
src/raytracer/: accel_intersect.rs  camera.rs  film.rs  intersect.rs  mod.rs  sample_generator.rs
src/scene/: boxloader.rs  camera.rs  color.rs  mod.rs
src/scene/loaders/: boxloader.rs  colladaloader.rs  mod.rs
src/scene/loaders/colladaloader/: collada_matrix.rs  collada_types.rs
timing/: Cargo.toml  README.md
timing/src/: lib.rs
www/: raytracer_wasm.js  raytracer_wasm_bg.wasm
