[package]
name = "raytracer-rs"
version = "0.1.0"
authors = ["aeg <andreas.edling@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# glfw = "0.33.0"
# gl = "0.14.0"

softcanvas = { path = "../../softcanvas"}