[package]
name = "raytracer-rs"
version = "0.1.0"
authors = ["aeg <andreas.edling@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#softcanvas = { path = "../../softcanvas"}
#parseval ={ path = "../../parseval"}

softcanvas = { git = "https://github.com/Andreas-Edling/softcanvas" }
parseval = { git = "https://github.com/Andreas-Edling/parseval" }