[package]
name = "raytracer-rs"
version = "0.1.0"
authors = ["aeg <andreas.edling@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rand = "0.7.2"
minifb = "0.14.0"
clap = "2.33.0"
image = "0.23.0"
parseval ={ path = "../parseval"}
