[package]
name = "raytracer"
version = "0.1.0"
authors = ["Andreas Edling <andreas.edling@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.37"
minifb = "0.28.0"
waithandle = "*"

raytracer_lib ={ path = "../raytracer_lib"}

