[package]
name = "raytracer_lib"
version = "0.1.0"
authors = ["Andreas Edling <andreas.edling@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rand = {version = "0.7.3", features=["small_rng", "wasm-bindgen"] }
image = "0.23.0"
parseval = { git = "https://github.com/Andreas-Edling/parseval.git" }