[package]
name = "raytracer_lib"
version = "0.1.0"
authors = ["Andreas Edling <andreas.edling@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

getrandom = { version = "0.2", features = ["js"] }
rand = {version = "0.8.4", features=["small_rng"] }
image = "0.23.0"
parseval = { git = "https://github.com/Andreas-Edling/parseval.git" }