[package]
name = "raytracer_lib"
version = "0.1.0"
authors = ["Andreas Edling <andreas.edling@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

getrandom = { version = "0.3.2", features = ["wasm_js"]}
rand = {version = "0.9.1", features=["small_rng"] }
image = "0.25.6"
parseval = { git = "https://github.com/Andreas-Edling/parseval.git" }