[package]
name = "raytracer_wasm"
version = "0.1.0"
authors = ["Andreas Edling <andreas.edling@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.53"
failure = "0.1.6"
raytracer_lib = { path = "../raytracer_lib"}


[dependencies.web-sys]
version = "0.3.37"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'ImageData',
]

[lib]
crate-type = ["cdylib"]

