[package]
name = "raytracer_wasm"
version = "0.1.0"
authors = ["Andreas Edling <andreas.edling@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.100"
failure = "0.1.8"
raytracer_lib = { path = "../raytracer_lib"}


[dependencies.web-sys]
version = "0.3.77"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'ImageData',
]

[lib]
crate-type = ["cdylib"]

